--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -19,7 +19,7 @@
 
 \newcommand{\arityof}[1]{\mathsf{Arity}_{#1}}
 
-\newcommand{\atomics}{\mathsf{Atomics}}
+\newcommand{\atomics}[1]{\mathcal{A}_{#1}}
 
 \newcommand{\bodies}[1]{\mathsf{Bodies}_{#1}}
 
@@ -262,6 +262,8 @@
 \newcommand{\relsof}[1]{\mathsf{Rels}_{#1}}
 
 \newcommand{\relctxs}{\mathsf{RelCtxs}}
+
+\newcommand{\relreps}[1]{\mathsf{Reps}_{#1}}
 
 \newcommand{\reltypes}[1]{T_{R}^{#1}}
 
